<resources>
    <string name="app_name">Найди настоящую любовь</string>
    <string name="facebook_app_id">827958454222476</string>
    <string name="fb_login_protocol_scheme">fb827958454222476</string>
    <string name="att_result">Результат</string>
    <string name="or_delimeter">или</string>
    <string name="create_account">Создать аккаунт</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">Ник</string>
    <string name="birth_date">Дата рождения</string>
    <string name="your_nickname">Ваш никнейм</string>
    <string name="what_are_you_like">Как вы выглядите?</string>
    <string name="height">Рост</string>
    <string name="default_seekbar">0.0</string>
    <string name="weight_seekbar">Вес</string>
    <string name="default_weight">0.0</string>
    <string name="race">Раса:</string>
    <string name="reg_form_email">Почта</string>
    <string name="reg_form_password">Пароль</string>

    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>январь</item>
        <item>февраль</item>
        <item>март</item>
        <item>апрель</item>
        <item>май</item>
        <item>июнь</item>
        <item>июль</item>
        <item>август</item>
        <item>сентябрь</item>
        <item>октябрь</item>
        <item>ноябрь</item>
        <item>декабрь</item>
    </string-array>

    <string-array name="years">
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
    </string-array>

    <string-array name="races">
        <item>Европиоидная</item>
        <item>Темнокожая (AA)</item>
        <item>Азиатская</item>
        <item>Латино</item>
        <item>Ам. Индеец</item>
        <item>Кор. Гавайская</item>
    </string-array>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Заголовок</string>
    <string name="action_settings">Настройки</string>
    <string name="other_data_text_view">Обо мне</string>
    <string name="have_house_text_view">У меня есть дом</string>
    <string name="have_car_text_view">У меня есть машина</string>
    <string name="i_m_a_single_person">Я один</string>
    <string name="we_are_a_couple">Мы пара</string>
    <string name="have_motorcycle_text_view">У меня есть мотоцикл</string>
    <string name="make_it_clear">Хотелось прояснить *</string>
    <string name="optional_text_view">* Необязательно</string>
    <string name="agreement_checkbox">Я принимаю</string>
    <string name="terms_and_conditions">Правила и условия использования</string>
    <string name="select_from_gallery">Выбрать из галереи</string>
    <string name="your_age">Ваш возраст</string>
    <string name="less_twenty_five">Меньше 25</string>
    <string name="twenty_five_nine">25-29</string>
    <string name="more_thirty">Больше 30</string>
</resources>
