<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/news_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="4dp"
        android:layout_margin="8dp" app:cardBackgroundColor="@color/cardview_light_background">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Fragments.SingleOrCoupleFragment">


            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
                    android:id="@+id/radioGroup" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/i_m_a_single_person" android:id="@+id/single_person-radio"
                        android:checked="true" android:clickable="true"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/we_are_a_couple" android:id="@+id/couple_radio" android:clickable="true"/>
            </RadioGroup>

            <Button
                    android:background="?attr/selectableItemBackground"
                    android:drawableEnd="@drawable/arrow_right_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_next_button" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintVertical_bias="1.0" android:drawableRight="@drawable/arrow_right_24"
                    app:layout_constraintTop_toBottomOf="@+id/optional_text_view"/>
            <TextView
                    android:text="@string/other_data_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/other_data" android:textSize="18sp"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.027" app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:text="@string/have_house_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableRight="@drawable/home_filled_24"
                    android:id="@+id/have_house_text_view" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/other_data" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
                    android:textAppearance="@style/TextAppearance.AppCompat" android:enabled="true"
                    android:visibility="visible" android:drawableEnd="@drawable/home_filled_24"
                    android:focusable="true"/>
            <TextView
                    android:text="@string/have_car_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/have_car_text_view" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/have_house_text_view" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.0"
                    android:drawableRight="@drawable/car_24" android:drawableEnd="@drawable/car_24"
                    android:clickable="true" android:focusable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat" android:enabled="true"/>
            <TextView
                    android:text="@string/have_motorcycle_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/have_motorcycle_text_view" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/have_car_text_view" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
                    android:drawableRight="@drawable/motorcycle_24" android:drawableEnd="@drawable/motorcycle_24"
                    android:checked="false"
                    android:clickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat" android:enabled="true"
                    android:focusable="true"/>
            <TextView
                    android:text="@string/make_it_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/make_clear" android:layout_marginTop="48dp"
                    app:layout_constraintTop_toBottomOf="@+id/have_motorcycle_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:ems="10"
                    android:id="@+id/make_clear_edit_text" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/make_clear" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintVertical_bias="0.0"
                    android:maxLength="2000"
                    android:maxLines="8"
                    android:lines="8"/>
            <TextView
                    android:text="@string/optional_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/optional_text_view" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/make_clear_edit_text"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.025"
                    app:layout_constraintVertical_bias="0.0"/>
            <CheckBox
                    android:text="@string/agreement_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/agree_checkbox" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/optional_text_view" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.031"
                    app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:text="@string/terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/terms_and_cond"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@+id/agree_checkbox" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.225"
                    app:layout_constraintVertical_bias="0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>