<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_choose_age"
        tools:context=".ChooseAgeActivity">

    <ImageView
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_next_white"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:id="@+id/to_web_view_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:drawableRight="@drawable/arrow_right_24"
            app:layout_constraintTop_toBottomOf="@+id/ages_radio_group" android:layout_marginRight="24dp"
            android:layout_marginLeft="8dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="205dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.118" android:id="@+id/ages_radio_group">
        <RadioButton
                android:text="@string/less_twenty_five"
                android:buttonTint="#ffffff"
                android:layout_width="match_parent"
                android:fontFamily="@font/helvetica_neue_cyr_bold"
                android:paddingLeft="16dp"
                android:layout_height="wrap_content" android:id="@+id/twenty_five_button" android:layout_weight="1"
                android:textSize="36sp" android:textColor="@color/browser_actions_bg_grey" android:checked="true"/>
        <RadioButton
                android:text="@string/twenty_five_nine"
                android:buttonTint="#ffffff"
                android:paddingLeft="16dp"
                android:fontFamily="@font/helvetica_neue_cyr_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/five_nine_button" android:layout_weight="1"
                android:textSize="36sp" android:textColor="@color/browser_actions_bg_grey"/>
        <RadioButton
                android:text="@string/more_thirty"
                android:buttonTint="#ffffff"
                android:fontFamily="@font/helvetica_neue_cyr_bold"
                android:paddingLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/thirty_button" android:layout_weight="1"
                android:textSize="36sp" android:textColor="@color/browser_actions_bg_grey"/>
    </RadioGroup>
    <TextView
            android:text="@string/your_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:fontFamily="@font/helvetica_neue_cyr_bold"
            android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="48sp"
            android:textColor="#F8E71E" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintVertical_bias="0.296"/>
</androidx.constraintlayout.widget.ConstraintLayout>